# pgen

./: .gitattributes  .gitignore  .gitmodules  CHANGES.md  COMMIT.md  CURRENT_STATUS.md  Cargo.toml  DEVELOPMENT_NOTES.md  IMPLEMENTATION_GUIDE.md  LIVE_ACHIEVEMENT_STATUS.md  MEMORY.md  Makefile  PGEN_ANNOTATION_100_PERCENT_CLOSURE_ROADMAP.md  PGEN_ANNOTATION_NORMATIVE_SPEC.md  PGEN_PARSER_INTEGRATION_CONTRACTS.md  PGEN_PARSER_ISSUE_REPORTING_PROTOCOL.md  PGEN_REGEX_PARSER_INTEGRATION_CONTRACT.md  PGEN_RELEASED_PARSER_BUG_LEDGER.md  PGEN_RELEASE_POLICY.md  PGEN_RETURN_ANNOTATION_PARSER_INTEGRATION_CONTRACT.md  PGEN_SEMANTIC_ANNOTATION_PARSER_INTEGRATION_CONTRACT.md  PGEN_SEMANTIC_STEERING_CONTROL_MATRIX.md  PGEN_SOTA_IMPLEMENTATION_ROADMAP.md  PGEN_STIMULI_MODULE_NORMATIVE_SPEC.md  PGEN_SYSTEMVERILOG_PARSER_INTEGRATION_CONTRACT.md  PGEN_SYSTEMVERILOG_PREPROCESSOR_PARSER_INTEGRATION_CONTRACT.md  PGEN_USER_GUIDE.md  PGEN_VHDL_PARSER_INTEGRATION_CONTRACT.md  PROJECT_OVERVIEW.md  QUICKSTART_AI_ONBOARDING.md  README.md  REGEX_BOOTSTRAP_ARCHITECTURE.md  RUST_CODEBASE_ANALYSIS.md  ReturnAnnotation.pm  SESSION_BOOTSTRAP.md  STRESS_TEST_STANDARDIZATION.md  SV_GRAMMAR_COVERAGE_MATRIX.md  WARP.md  debug_array_parsing.pl  debug_index_list.pl  (+31 more)
rust/: BRANCH_RETURN_ANNOTATIONS.md  CHANGES.md  Cargo.toml  DEBUG_IMPLEMENTATION.md  DEVELOPMENT_NOTES.md  LOG_FILES_README.md  Makefile  Makefile.auto-sync  Makefile.stress  REGENERATE_INDIVIDUAL_TESTS.md  RETURN_ANNOTATION_PIPELINE.md  RETURN_ANNOTATION_STATUS.md  build.rs  demo_run.rs  setup_auto_sync.sh  test_debug_parser  test_external_parser  test_external_parser_debug.rs  test_left_recursion.rs  test_real_regex_parser  update_makefile_sync.sh
rust/config/: branch_protection_policy.json  sota_exit_policy.env
rust/docs/: CLI_REFERENCE.md  COVERAGE_GAP_TRIAGE.md  DEVELOPMENT_GUIDE.md  EMBEDDING_API_CONTRACT.md  TECHNICAL_ARCHITECTURE.md  TEST_AUTOMATION.md
rust/perf/: thresholds.json
rust/scripts/: annotation_nonbootstrap_e2e_gate.sh  annotation_robustness_gate.sh  annotation_stimuli_quality_gate.sh  ast_dump_contract_gate.sh  branch_protection_contract_gate.sh  ci_workflow_local_gate.sh  clippy_on_rust_change.sh  create_placeholder_parser.sh  ebnf_frontend_dual_run_diff_gate.sh  ebnf_frontend_readiness_gate.sh  ebnf_stimuli_quality_gate.sh  fixed_point_bootstrap_gate.sh  hdl_frontend_readiness_gate.sh  mdbook_docs_gate.sh  nexsim_parser_embedding_contract_gate.sh  performance_gate.sh  regex_broader_corpus_proof_gate.sh  regex_combined_telemetry_contract_gate.sh  regex_corpus_bundle_contract_gate.sh  regex_embedded_code_block_contract_gate.sh  regex_formal_exhaustive_closure_gate.sh  regex_parser_book_gate.sh  regex_parser_family_contract_gate.sh  regex_parser_family_status_contract_gate.sh  regex_parser_family_status_gate.sh  regex_parser_integration_contract_gate.sh  regex_pcre2_compile_oracle_gate.sh  regex_pcre2_textsafe_corpus_gate.sh  return_annotation_exhaustiveness_gate.sh  rtl_const_expr_parser_book_gate.sh  rtl_frontend_generated_contract_gate.sh  rtl_frontend_parser_book_gate.sh  sc01_contract_gate.sh  sc02_contract_gate.sh  sc03_contract_gate.sh  sc04_contract_gate.sh  sc05_contract_gate.sh  sc06_contract_gate.sh  sc07_contract_gate.sh  sc08_contract_gate.sh  (+41 more)
rust/src/: ast_pipeline.rs  ast_shape_contract.rs  auto_return_annotation_shape_gate.rs  comprehensive_stress_test.rs  ebnf_frontend.rs  embedding_api.rs  individual_tests.rs  lib.rs  main.rs  makefile_generator.rs  parser_registry.rs  regex_compile_validation.rs  regex_stress_test.rs  return_parser_stress_test.rs  semantic_annotation_stress_test.rs  stress_test_framework.rs  sv_preprocessor.rs  test_automation.rs  test_discovery.rs  test_registry.rs  test_reproduction_demo.rs  test_target_mapper.rs  universal_test_runner.rs
rust/src/ast_pipeline/: annotation_validator.rs  ast_based_generator.rs  ast_code_generator.rs  ast_generator_direct.rs  ast_generator_integration.rs  ast_return_transform.rs  call_count_dashboard.rs  generator_adapter.rs  grouped_quantifier_parser.rs  high_performance_generator.rs  library.rs  mod.rs  mutual_recursion_handler.rs  parser_hooks.rs  predicate_expr.rs  return_annotation_handler.rs  semantic_directive_registry.rs  semantic_runtime.rs  semantic_transform.rs  stimuli_generator.rs  unified_return_ast.rs  unified_semantic_ast.rs
rust/src/parser_hooks/: mod.rs  regex.rs
rust/src/test_runner/: mod.rs  normalization.rs  parsers.rs  return_annotation_tests.rs  round_trip_tests.rs
rust/test_data/: return_tests.json  semantic_tests.json
rust/test_data/ast_shape_contract/: regex_v1.json  return_annotation_v1.json  rtl_const_expr_v1.json  rtl_frontend_v1.json  semantic_annotation_v1.json  systemverilog_preprocessor_v1.json  systemverilog_v1.json  vhdl_v1.json
rust/test_data/differential_baseline/: return_annotation_baseline.json  semantic_annotation_baseline.json
rust/test_data/grammar_quality/: ebnf_stimuli_contract.json  regex_broader_corpus_v0.json  regex_combined_telemetry_lightweight_v0.env  regex_embedded_code_block_contract_v0.json  regex_family_stimuli_contract.json  regex_formal_exhaustive_closure_contract.json  regex_parser_integration_contract_v0.json  regex_parser_integration_contract_v1.json  regex_pcre2_compile_oracle_lightweight_v0.env  return_annotation_stimuli_module_parity_contract.json  rtl_frontend_generated_parity_contract_v0.json  stimuli_module_parity_contract.json  systemverilog_combined_telemetry_lightweight_v0.env  systemverilog_context_legality_contract_cases.json  systemverilog_core_v0_contract.json  systemverilog_declared_identifier_contract_cases.json  systemverilog_external_corpus_triage_v0.json  systemverilog_failure_context_v0_contract.json  systemverilog_formal_exhaustive_closure_contract.json  systemverilog_nexsim_realistic_corpus_v0.json  systemverilog_package_qualification_contract_cases.json  systemverilog_port_binding_legality_contract_cases.json  (+15 more)
rust/tests/: auto_return_annotation_shape_gate_integration.rs  regex_grammar_tests.rs  regex_round_trip_integration.rs  test_branch_return_annotations.rs
(+2291 files in other folders)
