[package]
name = "pgen"
version = "1.0.0"
edition = "2024"
authors = ["EBNF Parser Generator Project"]
description = "Rust implementation of EBNF AST transformation pipeline"
license = "MIT"

[lib]
name = "pgen"
path = "src/lib.rs"

[[bin]]
name = "ast_pipeline"
path = "src/main.rs"
required-features = ["normal"]

[[bin]]
name = "ast_pipeline_bootstrap"
path = "src/main.rs"
required-features = ["bootstrap"]

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[[bin]]
name = "perf_bench"
path = "src/bin/perf_bench.rs"
required-features = ["generated_parsers"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
regex = "1.7"
regex-syntax = "0.8"
syn = { version = "2.0", features = ["full", "parsing", "printing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2.37"
lazy_static = "1.4"
rustfmt-wrapper = "0.2.1"

[features]
default = ["normal"]
normal = []
bootstrap = []
generated_parsers = []

[dev-dependencies]


serde_json = "1.0"
