[package]
name = "pgen"
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
authors = ["EBNF Parser Generator Project"]
description = "Rust implementation of EBNF AST transformation pipeline"
license = "MIT"

[lib]
name = "pgen"
path = "src/lib.rs"

[[bin]]
name = "ast_pipeline"
path = "src/main.rs"
required-features = ["normal"]

[[bin]]
name = "ast_pipeline_bootstrap"
path = "src/main.rs"
required-features = ["bootstrap"]

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[[bin]]
name = "perf_bench"
path = "src/bin/perf_bench.rs"
required-features = ["generated_parsers"]

[[bin]]
name = "regex_perf_probe"
path = "src/bin/regex_perf_probe.rs"
required-features = ["generated_parsers"]

[[bin]]
name = "ebnf_dual_run_diff"
path = "src/bin/ebnf_dual_run_diff.rs"
required-features = ["ebnf_dual_run"]

[[bin]]
name = "parseability_probe"
path = "src/bin/parseability_probe.rs"
required-features = ["generated_parsers"]

[[bin]]
name = "regex_corpus_probe"
path = "src/bin/regex_corpus_probe.rs"
required-features = ["generated_parsers"]

[[bin]]
name = "rtl_frontend_generated_contract_probe"
path = "src/bin/rtl_frontend_generated_contract_probe.rs"
required-features = ["generated_parsers"]

[[bin]]
name = "coverage_gap_triage"
path = "src/bin/coverage_gap_triage.rs"

[[bin]]
# Slice 3 / M2 differential validation gate. Compares the regex
# parser hook's typed entry methods to the legacy +
# `ParseContent::to_json_value()` reference path byte-for-byte across
# the PGEN-RGX-0073 bug-corpus patterns. Requires the regex parser to
# have been regenerated with the regex hook registered (use the
# maintained `regex_typed_differential_gate` make target which
# handles regen, build, run, and restore in one shot).
name = "regex_typed_differential_gate"
path = "src/bin/regex_typed_differential_gate.rs"
required-features = ["regex_typed_differential_gate"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
regex = "1.7"
regex-syntax = "0.8"
syn = { version = "2.0", features = ["full", "parsing", "printing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2.37"
lazy_static = "1.4"
rustfmt-wrapper = "0.2.1"
# Optim #6 (PGEN-RGX-0073): rustc-hash (FxHash) for the parser's memo HashMap. The
# memo is hit on every rule entry; default siphash is overkill for internal
# (RuleId, position) integer keys with no DoS exposure. FxHash is the same hasher
# rustc uses internally — small crate, no transitive deps, ~3-4× faster on small
# integer keys per the standard rustc-hash benchmarks.
rustc-hash = "2.1"
# Optim #10 (PGEN-RGX-0073): mimalloc as opt-in global allocator for the
# perf probe binary. macOS's libsystem_malloc accounts for ~30% of self-time
# on the regex parser hot path per samply profiling; mimalloc is a high-
# performance drop-in replacement with no additional transitive deps. The
# library itself does NOT set a global allocator — that's an embedder
# decision — but the perf probe binary opts in via the `mimalloc_perf`
# feature so we can measure the impact independently.
mimalloc = { version = "0.1", default-features = false, optional = true }

[features]
default = ["normal"]
normal = []
bootstrap = []
generated_parsers = []
ebnf_dual_run = []
mimalloc_perf = ["dep:mimalloc"]
# Slice 3 / M2 differential validation gate. Enables the
# `regex_typed_differential_gate` binary to reference
# `parser.parse_regex_typed()`. The typed methods only exist when the
# regex parser was regenerated with the regex hook registered (i.e.
# under `--inline-annotations`); the maintained
# `make regex_typed_differential_gate` target handles regen + build +
# run + restore so adopters don't have to wire it manually.
regex_typed_differential_gate = ["generated_parsers"]

[dev-dependencies]
serde_json = "1.0"
